--- a/app/src/main/res/layout/movie_grid_item.xml
+++ b/app/src/main/res/layout/movie_grid_item.xml
@@ -2,14 +2,15 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/smallPadding"
+    android:layout_gravity="center_horizontal"
+    android:layout_margin="@dimen/smallSeparation"
     app:cardCornerRadius="@dimen/smallPadding">
 
     <ImageView
         android:id="@+id/iv_poster_grid"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:contentDescription="@string/poster_ct"
         android:scaleType="centerCrop"
